--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,5 +15,6 @@
 @import './components/portfolio';
 @import './components/booking';
 @import './components/contacts';
+@import './components/footer';
 
 
