--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -24,9 +24,9 @@
     letter-spacing: 0.2em;
     color: var(--primary-color);
     transition: color 250ms linear;
+
+    &:hover,
+    &:focus {
+      color: var(--accent-color);
   }
-  
-  .social-networks-link-footer:hover,
-  .social-networks-link-footer:focus {
-    color: var(--accent-color);
   }
