--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,21 +11,19 @@
     cursor: pointer;
     margin-right: 17px;
     transition: background-color 250ms linear;
+    &:hover,
+    &:focus {
+      background-color: var(--accent-color);
+    }
   }
   
-  .button:hover,
-  .button:focus {
-    background-color: var(--accent-color);
-  }
-
   .btn-secondary {
     color: var(--primary-color);
     transition: color 250ms linear;
-  }
-  
-  .btn-secondary:hover,
-  .btn-secondary:focus {
-    color: var(--primary-bgc);
+  &:hover,
+  &:focus {
+      color: var(--primary-bgc);
+    }
   }
   
   .button-services {
