--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,5 +1,13 @@
 .portfolio {
-    padding: 120px 0;
+    padding: 84px 0;
+
+    @include tablet {
+      padding: 100px 0;
+      }
+  
+      @include desktop {
+      padding: 120px 0;
+      }
   }
   
   .portfolio-text {
@@ -11,6 +19,10 @@
   }
   
   .portfolio-photos {
-    display: flex;
-    gap: 30px;
+    
+
+    @include tablet {
+      display: flex;
+      gap: 30px;
+    }
   }
