--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,12 @@ img {
   height: auto;
 }
 
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
   line-height: 1.36;
@@ -53,8 +59,8 @@ body {
 
 .container {
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
@@ -79,8 +85,60 @@ body {
 }
 
 .logo-header {
+  width: 68px;
+  height: 55px;
   display: block;
   margin-right: 132px;
+  fill: var(--primary-bgc);
+}
+@media screen and (min-width: 768px) {
+  .logo-header {
+    fill: var(--primary-color);
+  }
+}
+
+.button-open-menu {
+  margin-left: auto;
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .button-open-menu {
+    display: none;
+  }
+}
+
+.button-close-menu {
+  position: absolute;
+  top: 35px;
+  right: 30px;
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 337px;
+  height: 100%;
+  background-color: var(--primary-bgc);
+  z-index: 1;
+}
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
+  }
+}
+
+.menu-container-link {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 1.4;
+  letter-spacing: 0.1em;
+  color: var(--primary-color);
 }
 
 .icon-nav {
@@ -95,9 +153,7 @@ body {
 .nav {
   transition: color 250ms linear;
 }
-
-.nav:hover,
-.nav:focus {
+.nav:hover, .nav:focus {
   color: var(--accent-color);
 }
 
@@ -108,14 +164,24 @@ body {
 }
 
 .header-link {
-  display: flex;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .header-link {
+    display: flex;
+  }
 }
 
 .main-contact {
-  display: flex;
-  align-items: center;
-  gap: 43px;
-  margin-left: auto;
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .main-contact {
+    display: flex;
+    align-items: center;
+    gap: 43px;
+    margin-left: auto;
+  }
 }
 
 .header-link .header-item + .header-item {
@@ -134,20 +200,25 @@ body {
 }
 
 .networks {
-  position: absolute;
-  transform: rotate(-90deg);
-  display: flex;
-  align-items: center;
-  gap: 40px;
-  margin-left: -100px;
-  top: 480px;
+  display: none;
 }
-.networks::before {
-  content: "";
-  width: 60px;
-  height: 1px;
-  background-color: currentColor;
-  display: block;
+@media screen and (min-width: 768px) {
+  .networks {
+    position: absolute;
+    transform: rotate(-90deg);
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    margin-left: -100px;
+    top: 480px;
+  }
+  .networks::before {
+    content: "";
+    width: 60px;
+    height: 1px;
+    background-color: currentColor;
+    display: block;
+  }
 }
 
 .button {
@@ -183,9 +254,17 @@ body {
   margin-top: 44px;
 }
 
+@media screen and (max-width: 767px) {
+  .hero .container {
+    padding: 0;
+  }
+}
+
 .hero-content {
+  min-width: 320px;
   max-width: 1070px;
-  height: 680px;
+  max-height: 680px;
+  min-height: 580px;
   background-color: #555555;
   background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/фон/bg.jpg);
   background-repeat: no-repeat;
@@ -193,7 +272,12 @@ body {
   flex-shrink: 1;
   padding-top: 204px;
   margin-left: auto;
-  padding-left: 100px;
+  padding-left: 31px;
+}
+@media screen and (min-width: 768px) {
+  .hero-content {
+    padding-left: 100px;
+  }
 }
 
 .hero-top-text {
@@ -206,23 +290,44 @@ body {
 
 .hero-title {
   font-weight: 700;
-  font-size: 72px;
-  line-height: 1.18;
+  font-size: 48px;
+  line-height: 1.2;
   letter-spacing: 0.05em;
   color: var(--primary-bgc);
   margin-bottom: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    font-size: 72px;
+  }
+}
 
 .hero-bottom-text {
   width: 358px;
-  font-size: 18px;
-  line-height: 1.67;
+  font-size: 16px;
+  line-height: 1.6;
   letter-spacing: 0.02em;
   color: var(--third-text-color);
 }
+@media screen and (min-width: 768px) {
+  .hero-bottom-text {
+    font-size: 18px;
+    line-height: 1.67;
+  }
+}
 
 .about {
-  padding: 120px 0;
+  padding: 84px 0;
+}
+@media screen and (min-width: 768px) {
+  .about {
+    padding: 100px 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .about {
+    padding: 120px 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -248,20 +353,30 @@ body {
 .about-title {
   max-width: 470px;
   font-weight: 700;
-  font-size: 42px;
+  font-size: 28px;
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-color);
   margin-bottom: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .about-title {
+    font-size: 42px;
+  }
+}
 
 .about-text-bottom {
   max-width: 470px;
   margin-bottom: 20px;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.67;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
+}
+@media screen and (min-width: 768px) {
+  .about-text-bottom {
+    font-size: 18px;
+  }
 }
 
 .about-text-secondary {
@@ -276,13 +391,24 @@ body {
 .elements-bg {
   margin-left: auto;
   margin-right: auto;
-  width: 1600px;
-  padding: 120px 0;
+  max-width: 1600px;
+  min-width: 480px;
   background-color: #111319;
   background-image: url(../images/фон/img.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding: 84px 0;
+}
+@media screen and (min-width: 768px) {
+  .elements-bg {
+    padding: 100px 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .elements-bg {
+    padding: 120px 0;
+  }
 }
 
 .elements-top-text {
@@ -295,11 +421,16 @@ body {
 
 .elements-title {
   font-weight: 700;
-  font-size: 42px;
+  font-size: 40px;
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-bgc);
   margin-bottom: 44px;
+}
+@media screen and (min-width: 768px) {
+  .elements-title {
+    font-size: 42px;
+  }
 }
 
 .element-bottom-item:last-child {
@@ -307,10 +438,16 @@ body {
 }
 
 .elements-bottom-text {
-  font-size: 18px;
-  line-height: 1.67;
+  font-size: 14px;
+  line-height: 1.4;
   letter-spacing: 0.02em;
   color: var(--third-text-color);
+}
+@media screen and (min-width: 768px) {
+  .elements-bottom-text {
+    font-size: 18px;
+    line-height: 1.7;
+  }
 }
 
 .top-text {
@@ -327,15 +464,21 @@ body {
   margin-right: 20px;
 }
 
-.main-list-prices {
-  display: flex;
-  gap: 30px;
+@media screen and (min-width: 1200px) {
+  .main-list-prices {
+    display: flex;
+    gap: 30px;
+  }
 }
 
 .box-services-prices {
-  width: 570px;
   padding: 30px 22px;
   background-image: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+@media screen and (min-width: 1200px) {
+  .box-services-prices {
+    width: 570px;
+  }
 }
 
 .list-services-prices {
@@ -355,7 +498,12 @@ body {
 }
 
 .features {
-  padding: 120px 70px 120px 100px;
+  padding: 84px 0;
+}
+@media screen and (min-width: 1200px) {
+  .features {
+    padding: 120px 70px 120px 100px;
+  }
 }
 
 .main-numbers-box {
@@ -409,11 +557,19 @@ body {
 }
 
 .features-main {
-  display: flex;
+  display: inline-flex;
+  flex-direction: column-reverse;
+}
+@media screen and (min-width: 1200px) {
+  .features-main {
+    display: flex;
+  }
 }
 
-.features-box {
-  margin-left: 130px;
+@media screen and (min-width: 1200px) {
+  .features-box {
+    margin-left: 130px;
+  }
 }
 
 .features-title {
@@ -427,7 +583,8 @@ body {
 }
 
 .features-bottom-text {
-  width: 500px;
+  margin-bottom: 44px;
+  width: 100%;
   font-size: 18px;
   line-height: 1.67;
   letter-spacing: 0.02em;
@@ -542,28 +699,41 @@ body {
 }
 
 @media screen and (min-width: 768px) {
-  .portfolio-photos {
+  .portfolio-photos-list {
     display: flex;
     gap: 30px;
   }
 }
 
-.main-booking-contacts {
-  padding: 130px 0 120px;
-  background-color: #191C26;
-  background-image: url(../images/фон/Bgfooter.png);
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: calc(50% - 15px) 100%;
-  max-width: 1600px;
-  margin: 0 auto;
+@media screen and (max-width: 767px) {
+  .portfolio-photos-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.booking-contacts {
-  display: flex;
+.main-booking-contacts {
+  background-color: #191C26;
+}
+@media screen and (min-width: 1200px) {
+  .main-booking-contacts {
+    background-image: url(../images/фон/Bgfooter.png);
+    padding: 130px 0 120px;
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: calc(50% - 15px) 100%;
+    max-width: 1600px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .booking-contacts {
+    display: flex;
+  }
 }
 
 .booking {
+  padding: 84px 0;
   width: calc(50% + 15px);
 }
 
@@ -587,7 +757,7 @@ body {
 }
 
 .textarea {
-  width: 570px;
+  width: 100%;
   resize: none;
   background-color: transparent;
   border-top: none;
@@ -696,9 +866,26 @@ display: block;
   color: var(--primary-bgc);
 }
 
-.contacts {
-  width: calc(50% - 15px);
-  margin-left: 100px;
+@media screen and (max-width: 1199px) {
+  .contacts-work-hours {
+    background-image: url(../images/фон/Bgfooter.png);
+    background-color: #191C26;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    padding: 100px 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .contacts-work-hours {
+    padding: 84px 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts {
+    width: calc(50% - 15px);
+    margin-left: 100px;
+  }
 }
 
 .contacts-title {
@@ -744,7 +931,12 @@ display: block;
   font-size: 11px;
   text-transform: uppercase;
   color: var(--primary-bgc);
-  margin-top: 70px;
+  margin-top: 44px;
+}
+@media screen and (min-width: 1200px) {
+  .address-top-text {
+    margin-top: 70px;
+  }
 }
 
 .address-bottom-text {
@@ -756,9 +948,14 @@ display: block;
 
 .main-footer {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 56px 0;
+  flex-direction: column-reverse;
+}
+@media screen and (min-width: 1200px) {
+  .main-footer {
+    justify-content: space-between;
+    align-items: center;
+    padding: 56px 0;
+  }
 }
 
 .footer-text {
