--- a/sass/components/_booking.scss
+++ b/sass/components/_booking.scss
@@ -1,19 +1,27 @@
 .main-booking-contacts {
-    padding: 130px 0 120px;
+    
     background-color: #191C26;
+
+    @include desktop {
     background-image: url(../images/фон/Bgfooter.png);
+    padding: 130px 0 120px;
     background-repeat: no-repeat;
     background-position: right;
     background-size: calc(50% - 15px) 100%;
     max-width: 1600px;
     margin: 0 auto;
+    }
   }
   
-  .booking-contacts {
+  .booking-contacts { 
+
+  @include desktop {
     display: flex;
+  }
   }
   
   .booking {
+    padding: 84px 0;
     width: calc(50% + 15px);
   }
   
@@ -38,7 +46,7 @@
   
   .textarea {
     
-    width: 570px;
+    width: 100%;
     resize: none;
     background-color: transparent;
     border-top: none;
