--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,8 +1,29 @@
-.contacts {
-    width: calc(50% - 15px);
-    margin-left: 100px;
-  }
+.contacts-work-hours {
   
+  @media screen and (max-width: 1199px) {
+    background-image: url(../images/фон/Bgfooter.png);
+    background-color: #191C26;
+    background-repeat: no-repeat;
+    // max-width: 1600px;
+    margin: 0 auto;   
+    padding: 100px 0;
+  }
+
+  @media screen and (max-width: 767px) {
+    padding: 84px 0;
+  }
+
+
+}
+
+.contacts {
+
+    @include desktop {
+      width: calc(50% - 15px);
+      margin-left: 100px;
+    }
+    }
+
   .contacts-title {
     font-style: normal;
     font-weight: 700;
@@ -46,7 +67,12 @@
     font-size: 11px;
     text-transform: uppercase;
     color: var(--primary-bgc);
-    margin-top: 70px;
+    margin-top: 44px;
+
+    @include desktop {
+      margin-top: 70px;
+    }
+
   }
   
   .address-bottom-text {
