--- a/sass/components/_elements.scss
+++ b/sass/components/_elements.scss
@@ -1,13 +1,22 @@
 .elements-bg {
     margin-left: auto;
     margin-right: auto;
-    width: 1600px;
-    padding: 120px 0;
+    max-width: 1600px;
+    min-width: 480px;
     background-color: #111319;
     background-image: url(../images/фон/img.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 84px 0;
+  
+    @include tablet {
+      padding: 100px 0;
+    }
+  
+    @include desktop {
+      padding: 120px 0;
+    }
   }
   
   .elements-top-text {
@@ -19,11 +28,15 @@
   }
   .elements-title {
     font-weight: 700;
-    font-size: 42px;
+    font-size: 40px;
     line-height: 1.16;
     letter-spacing: 0.05em;
     color: var(--primary-bgc);
     margin-bottom: 44px;
+
+    @include tablet {
+    font-size: 42px;
+    }
   }
 
   .element-bottom-item:last-child {
@@ -31,8 +44,13 @@
   }
 
   .elements-bottom-text {
-    font-size: 18px;
-    line-height: 1.67;
+    font-size: 14px;
+    line-height: 1.4;
     letter-spacing: 0.02em;
     color: var(--third-text-color);
+
+    @include tablet {
+      font-size: 18px;
+      line-height: 1.7;
+    }
   }
