--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,14 @@
+.hero .container {
+  @media screen and (max-width: 767px) {
+    padding: 0;  
+  }
+}
+
 .hero-content {
+    min-width: 320px;
     max-width: 1070px;
-    height: 680px;
+    max-height: 680px;
+    min-height: 580px;
     background-color: #555555;
     background-image: linear-gradient(
       rgba(25, 28, 38, 0.2),
@@ -13,7 +21,11 @@
     flex-shrink: 1;
     padding-top: 204px;
     margin-left: auto;
-    padding-left: 100px;
+    padding-left: 31px;
+
+    @include tablet {
+      padding-left: 100px;
+    }
   }
   
   .hero-top-text {
@@ -26,17 +38,26 @@
   
   .hero-title {
     font-weight: 700;
-    font-size: 72px;
-    line-height: 1.18;
+    font-size: 48px;
+    line-height: 1.2;
     letter-spacing: 0.05em;
     color: var(--primary-bgc);
     margin-bottom: 20px;
+
+    @include desktop {
+    font-size: 72px;
+    }
   }
   
   .hero-bottom-text {
     width: 358px;
-    font-size: 18px;
-    line-height: 1.67;
+    font-size: 16px;
+    line-height: 1.6;
     letter-spacing: 0.02em;
     color: var(--third-text-color);
+
+    @include tablet {
+    font-size: 18px;
+    line-height: 1.67;
+    }
   }
