--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -18,11 +18,15 @@
     margin-bottom: 44px;
   }
   
-  .portfolio-photos {
-    
-
+  .portfolio-photos-list {
     @include tablet {
       display: flex;
       gap: 30px;
+    }
+  }
+
+  .portfolio-photos-item:not(:last-child) {
+    @media screen and (max-width: 767px) {
+     margin-bottom: 30px; 
     }
   }
