--- a/sass/components/_prices.scss
+++ b/sass/components/_prices.scss
@@ -1,12 +1,19 @@
 .main-list-prices {
-    display: flex;
-    gap: 30px;
+
+
+@include desktop {
+  display: flex;
+  gap: 30px;
+}
   }
   
   .box-services-prices {
-    width: 570px;
+    
     padding: 30px 22px;
     background-image: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+   @include desktop {
+    width: 570px;
+   }
   }
   
   .list-services-prices {
