--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -25,6 +25,11 @@
       color: var(--primary-bgc);
     }
   }
+
+  .button-menu-header {
+    width: 194px;
+    margin-top: 24px;
+  }
   
   .button-services {
     padding-left: 15px;
