--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,6 +32,10 @@
     display: inline-flex;
     border: none;
     background-color: transparent;
+    &:hover,
+    &:focus {
+    fill: var(--accent-color);
+    }
    }
 
    .menu-container {
@@ -47,6 +51,19 @@
       display: none;
     }
    }
+
+   .menu-container-list {
+    padding-top: 118px;
+    padding-left: 40px;
+   }
+
+   .menu-container-contact {
+    padding: 64px 0 64px 40px;
+   }
+
+    .menu-container-item:not(:last-child) {
+    margin-bottom: 24px; 
+    }
   
    .menu-container-link {
     font-weight: 600;
@@ -54,15 +71,40 @@
     line-height: 1.4;
    letter-spacing: 0.1em;
    color: var(--primary-color);
+
    }
 
-  .icon-nav {
-    display: flex;
+   .menu-networks {
+    padding-left: 40px;
+   &::before {
+    content: "";
+    width: 60px;
+    height: 1px;
+    background-color: currentColor;
+    display: block;
+  }
+}
+
+  .menu-social-networks-link {
     font-weight: 600;
-    font-size: 12px;
-    line-height: 1.33;
-    letter-spacing: 0.1em;
-    color: var(--primary-bgc);
+    font-size: 11px;
+    letter-spacing: 0.2em;
+    color: var(--primary-color);
+  }
+
+
+  .icon-nav {
+    display: none;
+
+    @include tablet {
+      display: flex;
+      font-weight: 600;
+      font-size: 12px;
+      line-height: 1.33;
+      letter-spacing: 0.1em;
+      color: var(--primary-bgc);
+    }
+    
   }
   
   .nav {
