--- a/css/main.css
+++ b/css/main.css
@@ -158,14 +158,22 @@ body {
 }
 
 .menu-networks {
-  padding-left: 40px;
+  position: relative;
+  padding-left: 140px;
 }
 .menu-networks::before {
+  position: absolute;
+  top: 12px;
+  left: 40px;
   content: "";
   width: 60px;
   height: 1px;
   background-color: currentColor;
   display: block;
+}
+
+.menu-social-networks-item:not(:last-child) {
+  margin-bottom: 24px;
 }
 
 .menu-social-networks-link {
@@ -298,6 +306,10 @@ body {
   margin-top: 44px;
 }
 
+.button-booking {
+  margin: 0 auto;
+}
+
 @media screen and (max-width: 767px) {
   .hero .container {
     padding: 0;
@@ -395,7 +407,7 @@ body {
 }
 
 .about-title {
-  max-width: 470px;
+  width: 306px;
   font-weight: 700;
   font-size: 28px;
   line-height: 1.16;
@@ -406,6 +418,7 @@ body {
 @media screen and (min-width: 1200px) {
   .about-title {
     font-size: 42px;
+    width: 470px;
   }
 }
 
@@ -482,16 +495,8 @@ body {
 }
 
 .elements-bottom-text {
-  font-size: 14px;
-  line-height: 1.4;
-  letter-spacing: 0.02em;
-  color: var(--third-text-color);
-}
-@media screen and (min-width: 768px) {
-  .elements-bottom-text {
-    font-size: 18px;
-    line-height: 1.7;
-  }
+  font-size: 18px;
+  line-height: 1.7;
 }
 
 .top-text {
@@ -516,13 +521,46 @@ body {
 }
 
 .box-services-prices {
-  padding: 30px 22px;
-  background-image: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .box-services-prices {
+    padding: 30px 22px;
+    background-image: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+  }
 }
 @media screen and (min-width: 1200px) {
   .box-services-prices {
     width: 570px;
   }
+}
+
+.mobile-services-prices {
+  padding: 30px 20px;
+  background-image: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+
+.mobile-services-prices-item {
+  display: flex;
+  align-items: baseline;
+}
+.mobile-services-prices-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+.mobile-services-prices-item::before {
+  content: "";
+  height: 1px;
+  min-width: 65px;
+  background: rgba(157, 164, 189, 0.12);
+  flex-grow: 1;
+  order: 1;
+}
+
+.mobile-elements-bottom-text {
+  font-size: 14px;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
+  color: var(--third-text-color);
 }
 
 .list-services-prices {
@@ -778,7 +816,11 @@ body {
 
 .booking {
   padding: 84px 0;
-  width: calc(50% + 15px);
+}
+@media screen and (min-width: 768px) {
+  .booking {
+    width: calc(50% + 15px);
+  }
 }
 
 .booking-title {
@@ -787,6 +829,11 @@ body {
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-bgc);
+}
+@media screen and (max-width: 767px) {
+  .booking-title {
+    text-align: center;
+  }
 }
 
 .label-textarea {
@@ -819,14 +866,26 @@ body {
 }
 
 .main-input {
-  display: flex;
-  flex-wrap: wrap;
   list-style: none;
   padding: 44px 0;
 }
+@media screen and (min-width: 768px) {
+  .main-input {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
 
-.main-input .input-list + .input-list {
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .main-input .input-list + .input-list {
+    margin-left: 30px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .input-list:not(:last-child) {
+    margin-bottom: 67px;
+  }
 }
 
 /* .message {
@@ -849,7 +908,7 @@ body {
 display: block;
 } */
 .input {
-  width: 270px;
+  width: 100%;
   background-color: transparent;
   border-top: none;
   border-left: none;
@@ -864,6 +923,11 @@ display: block;
 .input:focus {
   color: var(--primary-bgc);
   border-color: var(--primary-bgc);
+}
+@media screen and (min-width: 768px) {
+  .input {
+    width: 270px;
+  }
 }
 
 .input::-moz-placeholder {
@@ -941,6 +1005,11 @@ display: block;
   color: var(--primary-bgc);
   margin-bottom: 40px;
 }
+@media screen and (max-width: 767px) {
+  .contacts-title {
+    text-align: center;
+  }
+}
 
 .address {
   display: flex;
@@ -990,6 +1059,10 @@ display: block;
   color: var(--third-text-color);
 }
 
+.footer {
+  padding: 44px 0;
+}
+
 .main-footer {
   display: flex;
   flex-direction: column-reverse;
@@ -1010,9 +1083,18 @@ display: block;
 }
 
 .networks-footer {
+  margin-left: auto;
+  margin-bottom: 20px;
   display: flex;
   align-items: center;
   gap: 40px;
+}
+.networks-footer::before {
+  content: "";
+  width: 60px;
+  height: 1px;
+  background-color: currentColor;
+  display: block;
 }
 
 .social-networks-link-footer {
