--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -33,7 +33,7 @@
   }
   
   .about-title {
-    max-width: 470px;
+    width: 306px;
     font-weight: 700;
     font-size: 28px;
     line-height: 1.16;
@@ -43,6 +43,7 @@
 
     @include desktop {
     font-size: 42px;
+    width: 470px;
     }
   }
   
