--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -33,6 +33,8 @@ padding: 84px 0;
   }
   
   .numbers {
+    display: inline-flex;
+    align-items: center;
     font-weight: 700;
     font-size: 42px;
     letter-spacing: 0.05em;
@@ -40,9 +42,10 @@ padding: 84px 0;
   }
   
   .features-sup {
-  // font-weight: 600;
-  // font-size: 16px;
-  // line-height: 1.4;
+    margin-left: 2px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.4;
   color: var(--accent-color);
   }
   
