--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,5 +1,9 @@
 .features {
 padding: 84px 0;
+
+@include tablet {
+  padding: 100px 0;
+}
   @include desktop {
     padding: 120px 70px 120px 100px;
   }
@@ -10,6 +14,11 @@ padding: 84px 0;
     display: flex;
     min-width: 170px;
     flex-wrap: wrap;
+
+    @include tablet {
+     padding-left: 279px;
+      // width: 210px;
+    }
 
     // @include desktop {
     //   max-width: 370px;  
@@ -94,5 +103,9 @@ padding: 84px 0;
     line-height: 1.67;
     letter-spacing: 0.02em;
     color: var(--secondary-color);
+
+    @media screen and (max-width: 1199px) {
+   width: 500px;   
+    }
   }
   
