--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,15 +1,19 @@
 .footer {
   padding: 44px 0;
+  @include tablet {
+  padding: 56px 0;
+  }
 }
 
 .main-footer {
-    display: flex;
-    flex-direction: column-reverse;
+  display: flex;
+  @media screen and (max-width: 767px) {
+    flex-direction: column-reverse; 
+  }
 
     @include desktop {
     justify-content: space-between;
     align-items: center;
-    padding: 56px 0;
     }
   }
   
@@ -32,6 +36,10 @@
     height: 1px;
     background-color: currentColor;
     display: block;
+    }
+
+    @include tablet {
+      margin-bottom: 0;
     }
   } 
   
