--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,6 @@ body {
   width: 68px;
   height: 55px;
   display: block;
-  margin-right: 132px;
   fill: var(--primary-bgc);
 }
 @media screen and (min-width: 768px) {
@@ -134,6 +133,7 @@ body {
   height: 100%;
   background-color: var(--primary-bgc);
   z-index: 1;
+  overflow: auto;
 }
 @media screen and (min-width: 768px) {
   .menu-container {
@@ -221,12 +221,27 @@ body {
 @media screen and (min-width: 768px) {
   .header-link {
     display: flex;
+    margin-left: 70px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header-link {
+    padding-left: 130px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .main-contact {
     display: none;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .main-contact {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 20px;
+    align-items: center;
+    margin-left: auto;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -238,7 +253,7 @@ body {
   }
 }
 
-.header-link .header-item + .header-item {
+.header-item:not(:first-child) {
   margin-left: 30px;
 }
 
@@ -291,7 +306,6 @@ body {
   border-radius: 25px;
   background-color: transparent;
   cursor: pointer;
-  margin-right: 17px;
   transition: background-color 250ms linear;
 }
 .button:hover, .button:focus {
@@ -348,6 +362,13 @@ body {
   .hero-content {
     width: 584px;
     padding-left: 100px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-content {
+    width: 1070px;
+    height: 680px;
+    margin-left: 90px;
   }
 }
 
@@ -512,6 +533,7 @@ body {
 .elements-bottom-text {
   font-size: 18px;
   line-height: 1.7;
+  color: var(--third-text-color);
 }
 
 .top-text {
@@ -536,8 +558,10 @@ body {
   }
 }
 
-.box-services-prices {
-  display: none;
+@media screen and (max-width: 1199px) {
+  .box-services-prices {
+    display: none;
+  }
 }
 @media screen and (min-width: 768px) {
   .box-services-prices {
@@ -554,6 +578,11 @@ body {
 .mobile-services-prices {
   padding: 30px 20px;
   background-image: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+@media screen and (min-width: 1200px) {
+  .mobile-services-prices {
+    display: none;
+  }
 }
 
 .mobile-services-prices-item {
@@ -605,18 +634,23 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .features {
-    padding: 120px 70px 120px 100px;
+    padding: 120px 0;
   }
 }
 
 .main-numbers-box {
   display: flex;
-  min-width: 170px;
   flex-wrap: wrap;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .main-numbers-box {
     padding-left: 279px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .main-numbers-box {
+    width: calc((100% - 60px) / 2);
+    padding-left: 100px;
   }
 }
 
@@ -629,11 +663,16 @@ body {
 }
 
 .numbers-box {
-  width: 193px;
+  width: 194px;
   height: 133px;
   background-color: var(--secondary-bgc);
   text-align: center;
   padding: 20px 24px;
+}
+@media screen and (min-width: 1200px) {
+  .numbers-box {
+    width: 170px;
+  }
 }
 
 .numbers {
@@ -667,19 +706,15 @@ body {
   color: var(--primary-color);
 }
 
-.features-main {
-  display: inline-flex;
-  flex-direction: column-reverse;
+@media screen and (max-width: 1199px) {
+  .features-main {
+    display: inline-flex;
+    flex-direction: column-reverse;
+  }
 }
 @media screen and (min-width: 1200px) {
   .features-main {
     display: flex;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .features-box {
-    margin-left: 130px;
   }
 }
 
@@ -701,9 +736,14 @@ body {
   letter-spacing: 0.02em;
   color: var(--secondary-color);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .features-bottom-text {
     width: 500px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features-bottom-text {
+    margin-bottom: 0;
   }
 }
 
@@ -842,6 +882,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .main-booking-contacts {
+    display: flex;
     background-image: url(../images/фон/Bgfooter.png);
     padding: 130px 0 120px;
     background-repeat: no-repeat;
@@ -864,6 +905,8 @@ body {
 @media screen and (min-width: 1200px) {
   .booking {
     width: calc(50% + 15px);
+    padding: 0;
+    padding-left: 216px;
   }
 }
 
@@ -1066,7 +1109,7 @@ display: block;
 .address-overlay {
   padding-left: 35px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .address-overlay {
     display: flex;
     gap: 80px;
