--- a/sass/components/_booking.scss
+++ b/sass/components/_booking.scss
@@ -3,6 +3,7 @@
     background-color: #191C26;
 
     @include desktop {
+      display: flex;
     background-image: url(../images/фон/Bgfooter.png);
     padding: 130px 0 120px;
     background-repeat: no-repeat;
@@ -25,6 +26,8 @@
 
     @include desktop {
       width: calc(50% + 15px);
+      padding: 0;
+      padding-left: 216px;
     } 
   }
   
