--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -9,7 +9,7 @@
     border-radius: 25px;
     background-color: transparent;
     cursor: pointer;
-    margin-right: 17px;
+    // margin-right: 17px;
     transition: background-color 250ms linear;
     &:hover,
     &:focus {
