--- a/sass/components/_elements.scss
+++ b/sass/components/_elements.scss
@@ -45,6 +45,6 @@
 
   .elements-bottom-text {
       font-size: 18px;
-      line-height: 1.7;
-    
+      line-height: 1.7; 
+      color: var(--third-text-color); 
   }
