--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -5,24 +5,24 @@ padding: 84px 0;
   padding: 100px 0;
 }
   @include desktop {
-    padding: 120px 70px 120px 100px;
+    padding: 120px 0;
   }
     
   }
   
   .main-numbers-box {
     display: flex;
-    min-width: 170px;
     flex-wrap: wrap;
 
-    @include tablet {
-     padding-left: 279px;
-      // width: 210px;
-    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      padding-left: 279px;
+      
+    } 
 
-    // @include desktop {
-    //   max-width: 370px;  
-    // }
+    @include desktop {
+    width: calc((100% - 2 * 30px) / 2);  
+    padding-left: 100px;
+    }
   }
   
   .numbers-box:nth-child(odd) {
@@ -34,11 +34,19 @@ padding: 84px 0;
   }
   
   .numbers-box {
-    width: 193px;
+    width: 194px;
     height: 133px;
     background-color: var(--secondary-bgc);
     text-align: center;
     padding: 20px 24px;
+
+    // @include tablet {
+    //   width: 210px;
+    // }
+
+    @include desktop {
+      width: 170px;
+    }
   }
   
   .numbers {
@@ -73,8 +81,12 @@ padding: 84px 0;
   }
   
   .features-main {
-    display: inline-flex;
-    flex-direction: column-reverse;
+    @media screen and (max-width: 1199px) {
+      display: inline-flex;
+      flex-direction: column-reverse; 
+    }
+
+
     @include desktop {
       display: flex;
     }
@@ -82,7 +94,7 @@ padding: 84px 0;
   
   .features-box {
     @include desktop {
-    margin-left: 130px;
+    // margin-left: 130px;
     }
   }
   
@@ -104,8 +116,12 @@ padding: 84px 0;
     letter-spacing: 0.02em;
     color: var(--secondary-color);
 
-    @media screen and (max-width: 1199px) {
-   width: 500px;   
+    @include tablet {
+      width: 500px;
     }
-  }
+
+    @include desktop {
+      margin-bottom: 0;
+    }
+    }
   
