--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ body {
   --secondary-color: #555555;
   --third-text-color: #9da4bd;
   --accent-color: #ff6c00;
+  --bg-linear: linear-gradient(
+    rgba(25, 28, 38, 0.2),
+    rgba(25, 28, 38, 0.2)
+  );
 }
 
 .container {
@@ -350,7 +354,7 @@ body {
   max-height: 680px;
   min-height: 580px;
   background-color: #555555;
-  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/фон/bg.jpg);
+  background-image: var(--bg-linear), url(../images/фон/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   flex-shrink: 1;
