--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,10 +10,7 @@
     max-height: 680px;
     min-height: 580px;
     background-color: #555555;
-    background-image: linear-gradient(
-      rgba(25, 28, 38, 0.2),
-      rgba(25, 28, 38, 0.2)
-    ),
+    background-image: var(--bg-linear),
     url(../images/фон/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
