--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 p,
 h1,
 h2,
@@ -56,7 +55,7 @@ body {
   --secondary-color: #555555;
   --third-text-color: #9da4bd;
   --accent-color: #ff6c00;
-  --bg-linear: linear-gradient(
+  --bg-gradient: linear-gradient(
     rgba(25, 28, 38, 0.2),
     rgba(25, 28, 38, 0.2)
   );
@@ -354,7 +353,7 @@ body {
   max-height: 680px;
   min-height: 580px;
   background-color: #555555;
-  background-image: var(--bg-linear), url(../images/фон/bg.jpg);
+  background-image: var(--bg-gradient), url(../images/background/bg-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   flex-shrink: 1;
@@ -362,10 +361,21 @@ body {
   margin-left: auto;
   padding-left: 31px;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero-content {
+    background-image: var(--bg-gradient), url(../images/background/bg-mobile-2x.jpg);
+  }
+}
 @media screen and (min-width: 768px) {
   .hero-content {
     width: 584px;
     padding-left: 100px;
+    background-image: var(--bg-gradient), url(../images/background/bg-tablet.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero-content {
+    background-image: var(--bg-gradient), url(../images/background/bg-tablet-2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -373,6 +383,12 @@ body {
     width: 1070px;
     height: 680px;
     margin-left: 90px;
+    background-image: var(--bg-gradient), url(../images/background/bg-desktop.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero-content {
+    background-image: var(--bg-gradient), url(../images/background/bg-desktop-2x.jpg);
   }
 }
 
@@ -491,20 +507,37 @@ body {
   max-width: 1600px;
   min-width: 480px;
   background-color: #111319;
-  background-image: url(../images/фон/img.png);
+  background-image: url(../images/background/elements-bg-mobile.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   padding: 84px 0;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .elements-bg {
+    background-image: url(../images/background/elements-bg-mobile-2x.png);
+  }
+}
 @media screen and (min-width: 768px) {
   .elements-bg {
     padding: 100px 0;
+    background-image: url(../images/background/elements-bg-tablet.png);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .elements-bg {
+    background-image: url(../images/background/elements-bg-tablet-2x.png);
   }
 }
 @media screen and (min-width: 1200px) {
   .elements-bg {
     padding: 120px 0;
+    background-image: url(../images/background/elements-bg-desktop.png);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .elements-bg {
+    background-image: url(../images/background/elements-bg-desktop-2x.png);
   }
 }
 
@@ -887,13 +920,18 @@ body {
 @media screen and (min-width: 1200px) {
   .main-booking-contacts {
     display: flex;
-    background-image: url(../images/фон/Bgfooter.png);
+    background-image: url(../images/background/bg-contact-desktop.png);
     padding: 130px 0 120px;
     background-repeat: no-repeat;
     background-position: right;
     background-size: calc(50% - 15px) 100%;
     max-width: 1600px;
     margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .main-booking-contacts {
+    background-image: url(../images/background/bg-contact-desktop-2x.png);
   }
 }
 
@@ -909,8 +947,7 @@ body {
 @media screen and (min-width: 1200px) {
   .booking {
     width: calc(50% + 15px);
-    padding: 0;
-    padding-left: 216px;
+    padding-top: 0;
   }
 }
 
@@ -1071,10 +1108,15 @@ display: block;
 
 @media screen and (max-width: 1199px) {
   .contacts {
-    background-image: url(../images/фон/Bgfooter.png);
+    background-image: url(../images/background/bg-contact-mobile.png);
     background-color: #191C26;
     background-repeat: no-repeat;
     padding: 100px 0;
+  }
+}
+@media screen and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 1199px) and (min-resolution: 192dpi), screen and (max-width: 1199px) and (min-resolution: 2dppx) {
+  .contacts {
+    background-image: url(../images/background/bg-contact-mobile-2x.png);
   }
 }
 @media screen and (max-width: 1199px) and (max-width: 767px) {
@@ -1085,6 +1127,16 @@ display: block;
 @media screen and (max-width: 767px) {
   .contacts {
     padding: 84px 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    background-image: url(../images/background/bg-contact-tablet.png);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .contacts {
+    background-image: url(../images/background/bg-contact-tablet-2x.png);
   }
 }
 @media screen and (min-width: 1200px) {
