--- a/sass/components/_booking.scss
+++ b/sass/components/_booking.scss
@@ -3,14 +3,17 @@
     background-color: #191C26;
 
     @include desktop {
-      display: flex;
-    background-image: url(../images/фон/Bgfooter.png);
+    display: flex;
+    background-image: url(../images/background/bg-contact-desktop.png);  
     padding: 130px 0 120px;
     background-repeat: no-repeat;
     background-position: right;
     background-size: calc(50% - 15px) 100%;
     max-width: 1600px;
     margin: 0 auto;
+    @include retina {
+    background-image: url(../images/background/bg-contact-desktop-2x.png);
+    }
     }
   }
   
@@ -26,8 +29,7 @@
 
     @include desktop {
       width: calc(50% + 15px);
-      padding: 0;
-      padding-left: 216px;
+      padding-top: 0;
     } 
   }
   
