--- a/sass/components/_elements.scss
+++ b/sass/components/_elements.scss
@@ -4,18 +4,29 @@
     max-width: 1600px;
     min-width: 480px;
     background-color: #111319;
-    background-image: url(../images/фон/img.png);
+    background-image: url(../images/background/elements-bg-mobile.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 84px 0;
+    @include retina {
+    background-image: url(../images/background/elements-bg-mobile-2x.png);  
+    }
   
     @include tablet {
-      padding: 100px 0;
+    padding: 100px 0;
+    background-image: url(../images/background/elements-bg-tablet.png);
+    @include retina {
+    background-image: url(../images/background/elements-bg-tablet-2x.png);
+    }  
     }
   
     @include desktop {
-      padding: 120px 0;
+    padding: 120px 0;
+    background-image: url(../images/background/elements-bg-desktop.png);
+    @include retina {
+    background-image: url(../images/background/elements-bg-desktop-2x.png);
+    }  
     }
   }
   
