--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,8 +10,8 @@
     max-height: 680px;
     min-height: 580px;
     background-color: #555555;
-    background-image: var(--bg-linear),
-    url(../images/фон/bg.jpg);
+    background-image: var(--bg-gradient),
+    url(../images/background/bg-mobile.jpg);
     background-repeat: no-repeat;
     background-size: cover;
    
@@ -20,15 +20,32 @@
     margin-left: auto;
     padding-left: 31px;
 
+    @include retina {
+      background-image: var(--bg-gradient),
+      url(../images/background/bg-mobile-2x.jpg); 
+    }
+
     @include tablet {
       width: 584px;
       padding-left: 100px;
+      background-image: var(--bg-gradient),
+      url(../images/background/bg-tablet.jpg);
+      @include retina {
+      background-image: var(--bg-gradient),
+      url(../images/background/bg-tablet-2x.jpg);
+      }
     }
 
     @include desktop {
       width: 1070px;
       height: 680px;
       margin-left: 90px;
+      background-image: var(--bg-gradient),
+      url(../images/background/bg-desktop.jpg);
+      @include retina {
+      background-image: var(--bg-gradient),
+      url(../images/background/bg-desktop-2x.jpg);
+      }
     }
   }
   
