--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,7 +10,7 @@ body {
     --secondary-color: #555555;
     --third-text-color: #9da4bd;
     --accent-color: #ff6c00;
-    --bg-linear: linear-gradient(
+    --bg-gradient: linear-gradient(
       rgba(25, 28, 38, 0.2),
       rgba(25, 28, 38, 0.2)
     );
