--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -38,3 +38,9 @@
      margin-bottom: 30px; 
     }
   }
+
+  // .portfolio-photos-item img {
+  //   @media screen and (max-width: 480px) {
+  //     width: 418px;
+  //   }
+  // }
