--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,6 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
-  width: 100%;
 }
 
 .is-hidden {
@@ -454,6 +453,20 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .about-list-image {
+    display: flex;
+    gap: 30px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .about-item-img:not(:last-child) {
+    width: 330px;
+    margin-bottom: 30px;
+  }
+}
+
 .about-text-top {
   font-weight: 600;
   font-size: 11px;
@@ -806,7 +819,13 @@ body {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .barbers-item img {
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 1199px) {
   .barbers-item:not(:last-child) {
     margin-bottom: 64px;
   }
