--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -15,13 +15,27 @@
   & img {
     @media screen and (max-width: 767px) {
       display: none; 
-     }
+     } 
   }
 
   @include tablet {
     display: flex;
     gap: 30px;
   }
+  }
+
+  .about-list-image {
+    @include desktop {
+      display: flex;
+      gap: 30px;
+    }
+  }
+
+  .about-item-img:not(:last-child) {
+    @media screen and (max-width: 1199px) {
+   width: 330px;
+   margin-bottom: 30px;   
+    }
   }
 
   .about-text-top {
