--- a/sass/components/_barbers.scss
+++ b/sass/components/_barbers.scss
@@ -21,8 +21,14 @@
     }
   }
 
+  .barbers-item img {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+   margin: 0 auto;   
+    }
+  }
+
   .barbers-item:not(:last-child) {
-    @media screen and (max-width: 767px) {
+    @media screen and (max-width: 1199px) {
     margin-bottom: 64px;  
     }
   }
