--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -30,7 +30,12 @@
   }
 
   .portfolio-photos-item {
-    width: calc((100% - 2 * 30px) / 2);
+   @media screen and (max-width: 767px) {
+    width: 418px;
+   }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 2 * 30px) / 2);    
+    }
   }
 
   .portfolio-photos-item:not(:last-child) {
@@ -41,6 +46,6 @@
 
   // .portfolio-photos-item img {
   //   @media screen and (max-width: 480px) {
-  //     width: 418px;
+  //     width: 100%;
   //   }
   // }
