--- a/css/main.css
+++ b/css/main.css
@@ -330,8 +330,13 @@ body {
 .button-services {
   padding-left: 15px;
   padding-right: 15px;
-  margin: 0 auto;
   margin-top: 44px;
+}
+@media screen and (min-width: 480px) {
+  .button-services {
+    margin: 0 auto;
+    margin-top: 44px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -401,11 +406,16 @@ body {
 
 .hero-title {
   font-weight: 700;
-  font-size: 48px;
+  font-size: 44px;
   line-height: 1.2;
   letter-spacing: 0.05em;
   color: var(--primary-bgc);
   margin-bottom: 20px;
+}
+@media screen and (min-width: 480px) {
+  .hero-title {
+    font-size: 48px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .hero-title {
@@ -414,11 +424,17 @@ body {
 }
 
 .hero-bottom-text {
-  width: 358px;
-  font-size: 16px;
+  width: 290px;
+  font-size: 14px;
   line-height: 1.6;
   letter-spacing: 0.02em;
   color: var(--third-text-color);
+}
+@media screen and (min-width: 480px) {
+  .hero-bottom-text {
+    width: 358px;
+    font-size: 16px;
+  }
 }
 @media screen and (min-width: 768px) {
   .hero-bottom-text {
@@ -478,11 +494,16 @@ body {
 .about-title {
   width: 306px;
   font-weight: 700;
-  font-size: 28px;
+  font-size: 30px;
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-color);
   margin-bottom: 20px;
+}
+@media screen and (min-width: 480px) {
+  .about-title {
+    font-size: 28px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .about-title {
@@ -518,7 +539,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 1600px;
-  min-width: 480px;
+  min-width: 300px;
   background-color: #111319;
   background-image: url(../images/background/elements-bg-mobile.png);
   background-position: center;
@@ -555,20 +576,31 @@ body {
 }
 
 .elements-top-text {
-  margin-left: 20px;
+  margin-left: 5px;
   font-weight: 600;
-  font-size: 11px;
+  font-size: 9px;
   text-transform: uppercase;
   color: rgba(157, 164, 189, 0.6);
+}
+@media screen and (min-width: 480px) {
+  .elements-top-text {
+    margin-left: 20px;
+    font-size: 11px;
+  }
 }
 
 .elements-title {
   font-weight: 700;
-  font-size: 40px;
+  font-size: 25px;
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-bgc);
   margin-bottom: 44px;
+}
+@media screen and (min-width: 480px) {
+  .elements-title {
+    font-size: 40px;
+  }
 }
 @media screen and (min-width: 768px) {
   .elements-title {
@@ -626,8 +658,18 @@ body {
 }
 
 .mobile-services-prices {
-  padding: 30px 20px;
+  padding: 30px 10px;
   background-image: linear-gradient(180deg, #171A24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+@media screen and (max-width: 479px) {
+  .mobile-services-prices {
+    width: 260px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .mobile-services-prices {
+    padding: 30px 20px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .mobile-services-prices {
@@ -645,17 +687,33 @@ body {
 .mobile-services-prices-item::before {
   content: "";
   height: 1px;
-  min-width: 65px;
   background: rgba(157, 164, 189, 0.12);
   flex-grow: 1;
   order: 1;
 }
+@media screen and (max-width: 479px) {
+  .mobile-services-prices-item::before {
+    content: "";
+    max-width: 25px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .mobile-services-prices-item::before {
+    content: "";
+    min-width: 65px;
+  }
+}
 
 .mobile-elements-bottom-text {
-  font-size: 14px;
+  font-size: 11px;
   line-height: 1.4;
   letter-spacing: 0.02em;
   color: var(--third-text-color);
+}
+@media screen and (min-width: 480px) {
+  .mobile-elements-bottom-text {
+    font-size: 14px;
+  }
 }
 
 .list-services-prices {
@@ -769,13 +827,19 @@ body {
 }
 
 .features-title {
-  width: 430px;
+  width: 320px;
   font-weight: 700;
-  font-size: 42px;
+  font-size: 36px;
   line-height: 1.16;
   letter-spacing: 0.05em;
   color: var(--primary-color);
   margin-bottom: 20px;
+}
+@media screen and (min-width: 480px) {
+  .features-title {
+    width: 430px;
+    font-size: 42px;
+  }
 }
 
 .features-bottom-text {
@@ -923,7 +987,10 @@ body {
   }
 }
 
-@media screen and (max-width: 767px) {
+.portfolio-photos-item {
+  width: 250px;
+}
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .portfolio-photos-item {
     width: 418px;
   }
