--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -49,11 +49,15 @@
   .about-title {
     width: 306px;
     font-weight: 700;
-    font-size: 28px;
+    font-size: 30px;
     line-height: 1.16;
     letter-spacing: 0.05em;
     color: var(--primary-color);
     margin-bottom: 20px;
+
+    @include mobile {
+    font-size: 28px;  
+    }
 
     @include desktop {
     font-size: 42px;
