--- a/sass/components/_elements.scss
+++ b/sass/components/_elements.scss
@@ -2,7 +2,7 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1600px;
-    min-width: 480px;
+    min-width: 300px;
     background-color: #111319;
     background-image: url(../images/background/elements-bg-mobile.png);
     background-position: center;
@@ -31,19 +31,28 @@
   }
   
   .elements-top-text {
-    margin-left: 20px;
+    margin-left: 5px;
     font-weight: 600;
-    font-size: 11px;
+    font-size: 9px;
     text-transform: uppercase;
     color: rgba(157, 164, 189, 0.6);
+    
+    @include mobile {
+    margin-left: 20px;
+    font-size: 11px;
+    }
   }
   .elements-title {
     font-weight: 700;
-    font-size: 40px;
+    font-size: 25px;
     line-height: 1.16;
     letter-spacing: 0.05em;
     color: var(--primary-bgc);
     margin-bottom: 44px;
+
+    @include mobile {
+    font-size: 40px; 
+    }
 
     @include tablet {
     font-size: 42px;
