--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -59,11 +59,15 @@
   
   .hero-title {
     font-weight: 700;
-    font-size: 48px;
+    font-size: 44px;
     line-height: 1.2;
     letter-spacing: 0.05em;
     color: var(--primary-bgc);
     margin-bottom: 20px;
+
+    @include mobile {
+    font-size: 48px;  
+    }
 
     @include desktop {
     font-size: 72px;
@@ -71,11 +75,16 @@
   }
   
   .hero-bottom-text {
-    width: 358px;
-    font-size: 16px;
+    width: 290px;
+    font-size: 14px;
     line-height: 1.6;
     letter-spacing: 0.02em;
     color: var(--third-text-color);
+
+    @include mobile {
+    width: 358px;
+    font-size: 16px;  
+    }
 
     @include tablet {
     font-size: 18px;
