--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -34,15 +34,15 @@ padding: 84px 0;
   }
   
   .numbers-box {
-    width: 194px;
+    width: 110px;
     height: 133px;
     background-color: var(--secondary-bgc);
     text-align: center;
     padding: 20px 24px;
 
-    // @include tablet {
-    //   width: 210px;
-    // }
+    @include mobile {
+      width: 194px;
+    }
 
     @include desktop {
       width: 170px;
@@ -53,9 +53,13 @@ padding: 84px 0;
     display: inline-flex;
     align-items: center;
     font-weight: 700;
-    font-size: 42px;
+    font-size: 36px;
     letter-spacing: 0.05em;
     color: var(--primary-color);
+
+    @include mobile {
+    font-size: 42px;  
+    }
   }
   
   .features-sup {
