--- a/sass/components/_prices.scss
+++ b/sass/components/_prices.scss
@@ -53,7 +53,7 @@
     @media screen and (max-width: 479px) {
       &::before {
         content: "";
-        max-width: 25px;
+        min-width: 16px;
         } 
     }
     @include mobile {
