--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -30,7 +30,7 @@
   }
 
   .portfolio-photos-item {
-   width: 260px;
+   width: 100%;
    @media screen and (min-width: 480px) and (max-width: 767px) {
     width: 418px;
    }
@@ -44,9 +44,3 @@
      margin-bottom: 30px; 
     }
   }
-
-  // .portfolio-photos-item img {
-  //   @media screen and (max-width: 480px) {
-  //     width: 100%;
-  //   }
-  // }
