--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -115,6 +115,7 @@
       line-height: 1.33;
       letter-spacing: 0.1em;
       color: var(--primary-bgc);
+      padding: 12px 0;
     }
     
   }
@@ -130,8 +131,8 @@
   
   .main-nav {
     display: flex;
-    align-items: center;
-    margin-top: 32px;
+    align-items:flex-start;
+    padding-top: 32px;
   }
   
   .header-link {
@@ -155,7 +156,7 @@
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       display: flex;
       flex-direction: column-reverse;
-      gap: 20px;
+      gap: 8px;
       align-items: center;
       margin-left: auto;
     } 
